--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Công thức - Ngữ pháp Tiếng Anh</title>
+    <title>EFK - Ứng dụng học tiếng Anh cho học snh lớp 1</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" />
@@ -16,14 +16,14 @@
     <div class="body-page">
         <div class="header">
             <div class="logo-app">
-                <img style="height: 75%" src="images/icon.webp" alt="Ảnh bìa" />
+                <img style="height: 75%" src="images/logo.png" alt="Logo" />
             </div>
             <div class="app-name">
                 <div class="title">
-                    Công thức - Ngữ pháp Tiếng Anh
+                    EFK - Ứng dụng học tiếng Anh cho học snh lớp 1
                 </div>
                 <div class="topic-same">
-                    <a href="" target="target">Nhóm 49</a>
+                    <a href="" target="target">English for Kids</a>
                     <a href="https://play.google.com/store/apps/category/EDUCATION" target="_blank">Giáo dục</a>
                 </div>
                 <button class="setting">
@@ -37,22 +37,22 @@
             </div>
             <div class="img">
                 <button>
-                    <img src="images/1.PNG" height="310">
+                    <img src="images/1.png" height="310">
                 </button>
                 <button>
-                    <img src="images/2.PNG" height="310">
+                    <img src="images/2.png" height="310">
                 </button>
                 <button>
-                    <img src="images/3.PNG" height="310">
+                    <img src="images/3.png" height="310">
                 </button>
                 <button>
-                    <img src="images/4.PNG" height="310">
+                    <img src="images/4.png" height="310">
                 </button>
                 <button>
-                    <img src="images/5.PNG" height="310">
+                    <img src="images/5.png" height="310">
                 </button>
                 <button>
-                    <img src="images/6.PNG" height="310">
+                    <img src="images/6.png" height="310">
                 </button>
             </div>
             <div class="next">
@@ -63,41 +63,47 @@
         <div class="text-introduce-app">
             <h2>Giới thiệu</h2>
             <br />
-                <h4>Công thức tiếng Anh - Ứng dụng giúp bạn tra cứu ngữ pháp tiếng Anh nhanh chóng trên điện thoại.</h4>
+                <h4>EFK là ứng dụng học tiếng Anh dành cho các em học sinh lớp 1. Dữ liệu của ứng dụng được tổng hợp bộ sách giáo khoa tiếng Anh lớp 1 của nhà xuất bản giáo dục Việt Nam trên hệ thống sachmem.vn, điều này sẽ giúp cho các em có thể ôn tập kiến thức được giảng dạy trên lớp thuận tiện hơn.</h4>
             <br />
             <br />
             <h4>
-                Bạn có thể sử dụng Công thức tiếng Anh để:
+                Bạn có thể sử dụng EFK để:
             </h4>
-            - Tra cứu công thức ngữ pháp tiếng Anh
+            - Học từ vựng tiếng Anh theo các chủ đề khác nhau
             <br />
             <br />
-            - Học tiếng Anh, dịch tiếng anh
+            - Ôn tập các từ đã học
             <br />
             <br />
-            - Kiểm tra tiếng anh
+            - Chơi những trò chơi mang tính chất giải trí mà vẫn có thể ôn luyện kiến thức
             <br />
             <br />
             <h4>
                 Các chức năng của ứng dụng:
             </h4>
-            - Công thức thì tiếng anh, các thì trong tiếng anh
+            - Đăng nhập với tài khoản Google và Facebook
             <br />
             <br />
-            - Công thức viết lại câu tiếng anh
+            - Học từ vựng qua các chủ đề
             <br />
             <br />
-            - Cách thêm ed,s, cách chia động từ
+            - Xem lại các từ đã học
             <br />
             <br />
-            - Bảng động từ bất quy tắc
+            - Chơi trò chơi đơn giản là Tap Tap và Memory Card
             <br />
             <br />
-            - Tra từ dịch văn bản
+            - Xem bảng xếp hạng người dùng
+			<br />
+            <br />
+            - Xem thông tin cá nhân
+			<br />
+            <br />
+            - Đăng xuất
             <br />
             <br />
             <br />
-            Bạn có thể sử dụng Công thức tiếng anh cho học sinh phổ thông, sinh viên, người đi làm... Bạn có thể sử dụng Công thức tiếng anh mọi lúc mọi nơi ngay trên điện thoại thông minh.
+            Bạn có thể sử dụng ứng dụng EFK trên điện thoại chạy hệ điều hành Android. Hoặc bạn cũng có thể sử dụng phiên bản web của ứng dụng tại địa chỉ https://learn-english-7c4c5.web.app
         </div>
     </div>
 </body>
