change index file

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>EFK - Ứng dụng học tiếng Anh cho học snh lớp 1</title>
+    <title>EFK - Ứng dụng học tiếng Anh cho học sinh lớp 1</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" />
@@ -20,14 +20,14 @@
             </div>
             <div class="app-name">
                 <div class="title">
-                    EFK - Ứng dụng học tiếng Anh cho học snh lớp 1
+                    EFK - Ứng dụng học tiếng Anh cho học sinh lớp 1
                 </div>
                 <div class="topic-same">
                     <a href="" target="target">English for Kids</a>
                     <a href="https://play.google.com/store/apps/category/EDUCATION" target="_blank">Giáo dục</a>
                 </div>
                 <button class="setting">
-                    <a href="https://github.com/doanhnn/INT3120-2020/blob/master/49/app-debug.apk" target="_blank">Cài đặt</a>
+                    <a href="https://github.com/lethithanhhoa/learn_english/blob/master/app-release.apk" target="_blank">Cài đặt</a>
                 </button>
             </div>
         </div>
@@ -37,22 +37,22 @@
             </div>
             <div class="img">
                 <button>
-                    <img src="images/1.png" height="310">
+                    <img src="images/h1.png" height="310">
                 </button>
                 <button>
-                    <img src="images/2.png" height="310">
+                    <img src="images/h2.png" height="310">
                 </button>
                 <button>
-                    <img src="images/3.png" height="310">
+                    <img src="images/h3.png" height="310">
                 </button>
                 <button>
-                    <img src="images/4.png" height="310">
+                    <img src="images/h4.png" height="310">
                 </button>
                 <button>
-                    <img src="images/5.png" height="310">
+                    <img src="images/h5.png" height="310">
                 </button>
                 <button>
-                    <img src="images/6.png" height="310">
+                    <img src="images/h6.png" height="310">
                 </button>
             </div>
             <div class="next">
@@ -63,7 +63,7 @@
         <div class="text-introduce-app">
             <h2>Giới thiệu</h2>
             <br />
-                <h4>EFK là ứng dụng học tiếng Anh dành cho các em học sinh lớp 1. Dữ liệu của ứng dụng được tổng hợp bộ sách giáo khoa tiếng Anh lớp 1 của nhà xuất bản giáo dục Việt Nam trên hệ thống sachmem.vn, điều này sẽ giúp cho các em có thể ôn tập kiến thức được giảng dạy trên lớp thuận tiện hơn.</h4>
+                EFK là ứng dụng học tiếng Anh dành cho các em học sinh lớp 1. Dữ liệu của ứng dụng được tổng hợp bộ sách giáo khoa tiếng Anh lớp 1 của nhà xuất bản giáo dục Việt Nam trên hệ thống sachmem.vn, điều này sẽ giúp cho các em có thể ôn tập kiến thức được giảng dạy trên lớp thuận tiện hơn.
             <br />
             <br />
             <h4>
